# SeisSegy

./: .gitmodules  .vimspector.json  README.md  meson.build
include/: SeisCommonSegy.h  SeisEncodings.h  SeisISU.h  SeisISegy.h  SeisOSU.h  SeisOSegy.h  SeisOSegyRev0.h  SeisSegy.h  TRY.h  meson.build
src/: SeisCommonSegy.c  SeisCommonSegyPrivate.h  SeisEncodings.c  SeisISegy.c  SeisOSegy.c  SeisOSegyRev0.c  SeisSegy.c  meson.build
test/: ascii_to_ebcdic.c  ebcdic_to_ascii.c  meson.build  print_trace_header.c  read_all_headers.c  read_all_traces.c  read_su_write_segy.c  read_trace.c  read_trace_header.c  read_write.c  read_write_su.c  write_rev0.c
